[gd_scene load_steps=4 format=3 uid="uid://hcuqmskq60xu"]

[ext_resource type="Texture2D" uid="uid://dmbwxm0gim8uc" path="res://Recursos/Tilemaps/59894.png" id="1_ivy0m"]
[ext_resource type="Script" path="res://Scripts/config_xarxa_neuronal.gd" id="1_wgnrs"]
[ext_resource type="Texture2D" uid="uid://cdqtgjttec2b3" path="res://Recursos/Tilemaps/598942.png" id="2_4ked3"]

[node name="ConfigXarxaNeuronal" type="Node2D"]
script = ExtResource("1_wgnrs")

[node name="fondo" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(160.005, 240)
scale = Vector2(2.238, 1.882)
texture = ExtResource("1_ivy0m")
region_enabled = true
region_rect = Rect2(0.100723, -0.0463715, 143.753, 255.855)

[node name="Terra" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(2245.6, 439.529)
scale = Vector2(1.5, 1.563)
texture = ExtResource("2_4ked3")
region_enabled = true
region_rect = Rect2(-68.035, -0.237, 3000, 55.886)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 8.0
offset_right = 307.0
offset_bottom = 378.0
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_top = 420.0
offset_right = 320.0
offset_bottom = 470.0
alignment = 1

[node name="Add" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Add"

[node name="Delete" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Delete"

[node name="Ok" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Ok"

[node name="Hidden" type="TextEdit" parent="."]
offset_left = 139.0
offset_top = 364.0
offset_right = 219.0
offset_bottom = 397.0
theme_override_font_sizes/font_size = 14

[node name="Label" type="Label" parent="."]
offset_left = 86.0
offset_top = 371.0
offset_right = 130.0
offset_bottom = 388.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Hidden"

[connection signal="pressed" from="HBoxContainer/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="HBoxContainer/Ok" to="." method="_on_ok_pressed"]
